Finessed dimensions on personal slips.